--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driverClassName: org.postgresql.Driver  
-    url: jdbc:postgresql://localhost:5432/educa
+    url: ${JDBC_DATABASE_URL}
     validationInterval: 15000
     timeBetweenEvictionRunsMillis: 5000
     minEvictableIdleTimeMillis: 60000
