--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,10 @@ bootRun {
   }
 }
 
+rebel {
+  showGenerated = true
+}
+
 repositories {
   mavenCentral()
 }
@@ -85,6 +89,7 @@ dependencies {
   compile "com.squareup.okhttp3:okhttp:${okHttpVersion}"
   compile "io.swagger:swagger-jersey2-jaxrs:${swaggerVersion}"
   compile "org.springframework.security.oauth:spring-security-oauth2:${springSecurityOauthVersion}"
+  runtime "org.springframework.security:spring-security-jwt:1.0.7.RELEASE"
   compile 'com.google.code.gson:gson:2.8.0'
   starters.each {
     compile "org.springframework.boot:spring-boot-starter-${it}"
