--- a/build.gradle
+++ b/build.gradle
@@ -91,6 +91,8 @@ dependencies {
   compile "org.springframework.security.oauth:spring-security-oauth2:${springSecurityOauthVersion}"
   runtime "org.springframework.security:spring-security-jwt:1.0.7.RELEASE"
   compile 'com.google.code.gson:gson:2.8.0'
+  compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.15'
+
   starters.each {
     compile "org.springframework.boot:spring-boot-starter-${it}"
   }
